# AutoMold

./: .gitignore  Cargo.toml  PRD.md  README.md  build.bat
examples/: generate_test_data.rs
openspec/: config.yaml
src/: lib.rs  main.rs
src/cli/: args.rs
src/core/: config.rs  context.rs  pipeline.rs
src/export/: metadata.rs  mod.rs  stl.rs  threemf.rs
src/geometry/: bbox.rs  mesh.rs  mod.rs  voxel_fallback.rs
src/pipeline/: boolean.rs  decimate.rs  loader.rs  mod.rs  mold_block.rs  orientation.rs  pins.rs  pipeline_core.rs  pour.rs  repair.rs  split.rs
src/utils/: logging.rs  math.rs  memory.rs  mod.rs  units.rs
test_data/: metadata.json
test_output/: metadata.json
tests/: integration_test.rs
